--- a/01.random_ts_gen_220502.ipynb
+++ b/01.random_ts_gen_220502.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Daily Code Workout Day 7(220502)\n",
+    "1. Monty Hall Problem\n",
+    "2. Covid Simulation\n",
+    "3. Covid Data Analysis(<- Here!)\n",
+    "4. Investment Simulation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
