--- a/02.Working_Notebook_Ver.1.4_220505.ipynb
+++ b/02.Working_Notebook_Ver.1.4_220505.ipynb
@@ -188,6 +188,17 @@
    "source": [
     "extend_sine(res_df.copy()[[3]]).reset_index(drop = True).plot()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Daily Code Workout Day 9(220506)\n",
+    "1. Monty Hall Problem\n",
+    "2. Covid Simulation\n",
+    "3. Covid Data Analysis\n",
+    "4. FFT TS Projection(<- Here!)"
+   ]
   }
  ],
  "metadata": {
