--- a/02.Working_Notebook_Ver.1.4_220505.ipynb
+++ b/02.Working_Notebook_Ver.1.4_220505.ipynb
@@ -199,6 +199,49 @@
     "3. Covid Data Analysis\n",
     "4. FFT TS Projection(<- Here!)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def extend_sine2(df_o, add_n = 52, proj_only = False):\n",
+    "    df = df_o.copy()[list(df_o)[:1]].dropna()\n",
+    "    col, n = list(df)[0], df.shape[0]\n",
+    "    \n",
+    "    assert n > 10\n",
+    "    \n",
+    "    if df.drop_duplicates().shape[0] <=3:\n",
+    "        s_df, c_df = df.copy(), df.copy()\n",
+    "    else:\n",
+    "        temp = df.copy()\n",
+    "        temp['zero_up'] = np.where( (temp[col].shift(1)<=0) & (temp[col].shift(-1)>=0), 1, 0  )\n",
+    "        temp['zero_down'] = np.where( (temp[col].shift(1)>=0) & (temp[col].shift(-1)<=0), 1, 0)\n",
+    "        minmax_tr = pd.concat([temp[(temp['zero_down']==1) & (temp[col]<=0)],\n",
+    "                               temp[(temp['zero_up']==1) & (temp[col]>=0)]]).shape[0]\n",
+    "        if minmax_tr <= 2:\n",
+    "            half = sorted([df[col].idxmin(), df[col].idxmax()])\n",
+    "        else:\n",
+    "            if temp[temp['zero_up']==1].index.max()> temp[temp['zero_down']==1].index.max():\n",
+    "                half = temp[(temp['zero_up']==1) & (temp[col]>=0)]\n",
+    "            else:\n",
+    "                half = temp[(temp['zero_down']==1) & (temp[col]<=0)]\n",
+    "            half = [half.index.min(), half.index.max()]\n",
+    "        s_df = df[(df.index<=half[1])]\n",
+    "        c_df = df[(df.index>=half[0]) & (df.index<=half[1])]\n",
+    "        if minmax_tr <= 2:\n",
+    "            c_df = pd.concat([c_df.iloc[1:].sort_index(ascending = False), c_df])\n",
+    "        else:\n",
+    "            c_df = c_df.iloc[1:].reset_index(drop = True)\n",
+    "    ext_df = pd.concat([c_df] * (int( (n + add_n - s_df.shape[0])/c_df.shape[0]) + 2))\n",
+    "    ext_df = pd.concat([s_df, ext_df]).head(n + add_n).reset_index(drop = True)\n",
+    "    if proj_only:\n",
+    "        return(ext_df.iloc[n:])\n",
+    "    else:\n",
+    "        return(pd.concat([df, ext_df.iloc[n:].rename(columns = {col:str(col)+'_proj'})], \n",
+    "                         axis = 1).reset_index(drop = True))"
+   ]
   }
  ],
  "metadata": {
